@@ -1,3 +1,7 @@
+2010-06-09  Kirit Saelensminde  <kirit@felspar.com>
+ User agent
+ - The request data can now be retrieved from the request object.
+
 2010-05-30  Kirit Saelensminde  <kirit@felspar.com>
  Python bindings
  - Added binding for the host class.
